# Disk-Formater

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt  blkDevices.c  fat.c
lib/include/: blkDevices.h  fat.h
src/: bootcode.asm  main.c
